Continued work on makeing the page content represent my work and skills. Did some user testing and user eexperience improvements.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         code.</p>
                 </div>
                 <div class="hero__cta">
-                    <a href="index.html#projects" class="button primary red arrow-down">Projects</a>
-                    <a href="index.html#contact" class="button primary red arrow-down">Get in touch</a>
+                    <a href="index.html#projects" class="button primary pink arrow-down">Projects</a>
+                    <a href="index.html#contact" class="button primary pink arrow-down">Get in touch</a>
                 </div>
             </div>
         </section>
@@ -80,6 +80,9 @@
                                     <span class="sr-only">JavaScript</span>
                                 </span>
                             </div>
+                            <h3 class="card-s__heading">ESC News</h3>
+                            <p class="card-s__description">News page with the lates in Eurovision news.
+                                Admin registration and login to post and edit news. View and share posts you enjoy!</p>
                             <a href="https://mamf92.github.io/escnews/" class="button primary medium pink"
                                 aria-label="Visit the ESC News website">Visit deployed website</a>
                         </div>
@@ -151,11 +154,6 @@
                     </div>
                     <div class="card-l__content">
                         <div class="card-l__text">
-                            <div class="card-l__badge">
-                                <p class="card-l__exclamation">New!</p>
-                                <p class="card-l__message">This exhibition is brand new!</p>
-                                <img class="card-l__icon" src="assets/icons/campaign.svg" alt="#" aria-hidden="true">
-                            </div>
                             <div class="card-l__tech">
                                 <span class="tech-icon">
                                     <img src="assets/icons/html5.svg" alt="HTML" class="icon html-icon">
@@ -166,8 +164,13 @@
                                     <span class="sr-only">CSS</span>
                                 </span>
                                 <span class="tech-icon">
-                                    <img src="assets/icons/javascript.svg" alt="JavaScript" class="icon js-icon">
-                                    <span class="sr-only">JavaScript</span>
+                                    <img src="assets/icons/react.svg" alt="React" class="icon react-icon">
+                                    <span class="sr-only">React</span>
+                                </span>
+                                <span class="tech-icon">
+                                    <img src="assets/icons/typescript.svg" alt="TypeScript"
+                                        class="icon typescript-icon">
+                                    <span class="sr-only">TypeScript</span>
                                 </span>
                             </div>
                             <h3 class="card-l__heading">ESC Party</h3>
@@ -177,17 +180,11 @@
                                 process.</p>
                         </div>
                         <div class="card-l__cta">
-                            <a href="" class="card-l__cta--small button primary medium red"
-                                aria-label="Explore more events, exhibitions, and activities.">Visit the deployed
+                            <a href="" class="card-l__cta button primary medium pink"
+                                aria-label="Explore more events, exhibitions, and activities.">Visit deployed
                                 page</a>
-                            <a href="html/about.html#contact-us"
-                                class="button primary medium card-l__cta--large red">Check the code</a>
-                        </div>
-                        <div class="card-l__social">
-                            <div class="card-l__social-image"><img src="assets/icons/avatar-group.png"
-                                    alt="Small profile pictures of some of our amazing staff. ">
-                            </div>
-                            <p class="card-l__social-text">Meet one of us!</p>
+                            <a href="html/about.html#contact-us" class="card-l__cta button primary medium pink">Check
+                                the code</a>
                         </div>
                     </div>
                 </article>
@@ -200,6 +197,20 @@
             <div class="contact-cards">
                 <article class="card-l">
                     <div class="card-l__content">
+                        <div class="card-l__cta">
+                            <a href="https://www.linkedin.com/in/mamf92/" target="_blank"
+                                class="tech-icon linkedin-icon linkedin-icon--pink">
+                                <span class="sr-only">Go to my LinkedIn</span>
+                            </a>
+                            <a href="https://github.com/mamf92" target="_blank"
+                                class="tech-icon github-icon github-icon--pink">
+                                <span class="sr-only">Go to my Github</span>
+                            </a>
+                            <a href="mailto:mamfischer92@gmail.com" target="_blank"
+                                class=" tech-icon email-icon email-icon--pink">
+                                <span class="sr-only">Email me</span>
+                            </a>
+                        </div>
                         <div class="card-l__text">
                             <h3 class="card-l__heading">Do you have any questions or want to talk about new
                                 opportunities
@@ -207,35 +218,6 @@
                             <p class="card-l__description">Get in touch through LinkedIn, check out my work on GitHub,
                                 or
                                 send me an email. I'll get back to you as quickly as I can :) </p>
-                            <div class="card-l__tech">
-                                <a href="https://www.linkedin.com/in/mamf92/" target="_blank"
-                                    class="tech-icon linkedin-icon">
-                                    <span class="sr-only">Go to my LinkedIn</span>
-                                </a>
-                                <a href="https://github.com/mamf92" target="_blank" class="tech-icon github-icon">
-                                    <span class="sr-only">Go to my Github</span>
-                                </a>
-                                <a href="mailto:mamfischer92@gmail.com" target="_blank" class="tech-icon email-icon">
-                                    <span class="sr-only">Email me</span>
-                                </a>
-                            </div>
-
-                        </div>
-                        <div class="card-l__cta">
-                            <a href="html/explore.html" class="card-l__cta--small button primary medium"
-                                aria-label="Explore more events, exhibitions, and activities.">Explore
-                                more</a>
-                            <a href="html/about.html#contact-us" class="button primary medium card-l__cta--large">Book a
-                                visit</a>
-                            <a href="html/explore.html" class="button secondary medium card-l__cta--large"
-                                aria-label="Explore more events, exhibitions, and activities.">Explore
-                                more</a>
-                        </div>
-                        <div class="card-l__social">
-                            <div class="card-l__social-image"><img src="assets/icons/avatar-group.png"
-                                    alt="Small profile pictures of some of our amazing staff. ">
-                            </div>
-                            <p class="card-l__social-text">Meet one of us!</p>
                         </div>
                     </div>
                 </article>
@@ -259,8 +241,9 @@
                     </p>
                 </div>
                 <div class="hero__cta">
-                    <a href="html/plan-visit.html" class="button primary">Plan your visit</a>
-                    <a href="html/play.html" class="button primary red">Go play!</a>
+                    <a href="html/plan-visit.html" class="button primary pink">Check my GitHub</a>
+                    <a href="assets/cv/Martin Fischer Frontend Developer CV - Projects and Skills.pdf"
+                        class="button primary pink" download>Download CV</a>
                 </div>
             </div>
         </section>
@@ -269,64 +252,35 @@
     <footer class="footer">
         <div class="follow">
             <div class="some">
-                <p class="footer-heading">Follow us</p>
+                <p class="footer-heading">Get in touch</p>
                 <div class="some__links">
-                    <a href="https://facebook.com/" aria-label="Go to our Facebook page"><i
-                            class="fa-brands fa-facebook"></i></a>
-                    <a href="https://instagram.com/" aria-label="Go to our Instagram page"><i
-                            class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com/" aria-label="Go to our YouTube page"><i
-                            class="fa-brands fa-youtube"></i></a>
-                    <a href="https://tiktok.com/" aria-label="Go to our TikTok page"><i
-                            class="fa-brands fa-tiktok"></i></a>
-                </div>
-            </div>
-            <div class="newsletter">
-                <label for="newsletter-email" class="footer-heading">Sign up for our newsletter</label>
-                <input type="email" name="email" id="newsletter-email" class="newsletter__input"
-                    placeholder="you@mail.com">
-                <a href="html/404.html" class="button primary small newsletter__button">Sign up!</a>
-            </div>
-        </div>
-        <div class="contact">
-            <div class="contact__logo">
-                <img src="assets/logos/pink-logo.png" alt="Community Science Museum Logo" class="logo__image">
-                <p class="logo__text footer-heading">Community Science Museum</p>
-            </div>
-            <div class="contact-info">
-                <div class="contact-info__address">
-                    <p class="footer-heading">Address:</p>
-                    <a href="https://maps.app.goo.gl/TqnFE8V5vw1pg4kJA" aria-label="Find us on Google Maps">1 Science
-                        Road, Nottingham, UK
-                    </a>
-                </div>
-                <div class="contact-info__contact">
-                    <p class="footer-heading">Contact:</p>
-                    <a href="tel:+447911123456" aria-label="Call us at +44 7911 123456">+44
-                        7911 123456
-                    </a>
-                    <a href="mailto:hi@sciencemuseum.com" aria-label="Email us at hi@sciencemuseum.com">
-                        hi@sciencemuseum.com
+                    <a href="https://www.linkedin.com/in/mamf92/" aria-label="Go to my LinkedIn page"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/mamf92" aria-label="Go to my GitHub page"><i
+                            class="fa-brands fa-github"></i></a>
+                    <a href="mailto:mamfischer92@gmail.com" target="_blank">
+                        <i class="fa-solid fa-envelope"></i>
                     </a>
                 </div>
             </div>
         </div>
+
         <div class="links">
             <div class="links__visit">
-                <a href="html/plan-visit.html" class="footer-heading">Plan your visit</a>
-                <a href="html/explore.html#events">Events</a>
-                <a href="html/explore.html#exhibitions">Exhibitions</a>
-                <a href="html/404.html">Education</a>
+                <a href="index.html#main-content" class="footer-heading">Top of page</a>
+                <a href="index.html#projects">Projects</a>
+                <a href="index.html#passion-project">Passions Project</a>
+                <a href="index.html#contact">Contact info</a>
             </div>
             <div class="links__involved">
-                <a href="html/get-involved.html" class="footer-heading">Get involved</a>
-                <a href="html/get-involved.html#volunteer">Volunteer</a>
-                <a href="html/get-involved.html#support">Donate</a>
-                <a href="html/get-involved.html#internship">Internship</a>
+                <a href="index.html#projects" class="footer-heading">Projects</a>
+                <a href="https://mamf92.github.io/escnews/">ESC News</a>
+                <a href="https://mamf92.github.io/escparty/">ESC Party</a>
+                <a href="https://mamf92.github.io/semester-project-1/">Community Museum</a>
             </div>
         </div>
         <div class="copyright">
-            <p class="copyright__text">© 2024 Community Science Museum. All rights reserved.</p>
+            <p class="copyright__text">© 2025 Martin Fischer. All rights reserved.</p>
         </div>
     </footer>
 </body>
