--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <a href="#main-content" class="skip2main sr-only">Skip to main content</a>
     <header>
-        <a href="index.html" class="header__logo-container">
+        <a href="index.html#about" class="header__logo-container">
             <img src="assets/MF logo.png" alt="mf logo" class="logo--image">
         </a>
         <nav class="nav">
@@ -174,7 +174,7 @@
                                 </span>
                             </div>
                             <h3 class="card-l__heading">ESC Party</h3>
-                            <p class="card-l__description">Built a React-based Eurovision app with TypeScript, featuring
+                            <p class="card-l__description">A React-based Eurovision app with TypeScript, featuring
                                 multiplayer quizzes and ongoing development of quiz creation, live event scoreboards,
                                 and artist highlights. A learning-by-doing project focused on an iterative development
                                 process.</p>
