Completed first round of adjustments to make webpage responsive. Testing needed.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="#main-content" class="skip2main sr-only">Skip to main content</a>
     <header>
         <a href="index.html#about" class="header__logo-container">
-            <img src="assets/MF logo.png" alt="mf logo" class="logo--image">
+            <img src="assets/MF logo.webp" alt="mf logo" class="logo--image">
         </a>
         <nav class="nav">
             <a href="index.html#about" class="material-symbols-rounded">person</a>
@@ -83,9 +83,9 @@
                             <h3 class="card-s__heading">ESC News</h3>
                             <p class="card-s__description">News page with the lates in Eurovision news.
                                 Admin registration and login to post and edit news. View and share posts you enjoy!</p>
-                            <a href="https://mamf92.github.io/escnews/" class="button primary medium pink"
-                                aria-label="Visit the ESC News website">Visit deployed website</a>
                         </div>
+                        <a href="https://mamf92.github.io/escnews/" class="button primary medium pink"
+                            aria-label="Visit the ESC News website">Visit deployed website</a>
                 </article>
                 <article class="card-s">
                     <div class="card-s__image"><img src="assets/images/rainydaysv2.png"
@@ -150,9 +150,10 @@
             </div>
             <div class="passion-product-cards">
                 <article class="card-l">
-                    <div class="card-l__image"><img src="assets/images/escparty.png" alt="Mobile webpage of ESC Party">
+                    <div class="card-l__image--right"><img src="assets/images/escparty.png"
+                            alt="Mobile webpage of ESC Party">
                     </div>
-                    <div class="card-l__content">
+                    <div class="card-l__content--left">
                         <div class="card-l__text">
                             <div class="card-l__tech">
                                 <span class="tech-icon">
@@ -180,10 +181,10 @@
                                 process.</p>
                         </div>
                         <div class="card-l__cta">
-                            <a href="" class="card-l__cta button primary medium pink"
+                            <a href="" class="card-l__cta button primary small pink"
                                 aria-label="Explore more events, exhibitions, and activities.">Visit deployed
                                 page</a>
-                            <a href="html/about.html#contact-us" class="card-l__cta button primary medium pink">Check
+                            <a href="html/about.html#contact-us" class="card-l__cta button primary small pink">Check
                                 the code</a>
                         </div>
                     </div>
@@ -196,6 +197,9 @@
             </div>
             <div class="contact-cards">
                 <article class="card-l">
+                    <div class="card-l__image"><img src="assets/images/profil-picture.jpg" alt="Martin Fischer's profile
+                        picture">
+                    </div>
                     <div class="card-l__content">
                         <div class="card-l__cta">
                             <a href="https://www.linkedin.com/in/mamf92/" target="_blank"
@@ -212,9 +216,7 @@
                             </a>
                         </div>
                         <div class="card-l__text">
-                            <h3 class="card-l__heading">Do you have any questions or want to talk about new
-                                opportunities
-                                over a coffe?</h3>
+                            <h3 class="card-l__heading">A coffee with opportunities?</h3>
                             <p class="card-l__description">Get in touch through LinkedIn, check out my work on GitHub,
                                 or
                                 send me an email. I'll get back to you as quickly as I can :) </p>
