Added scroll section highlighting with underline using observer in js. Tried to add .gitignore file.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <script src="https://kit.fontawesome.com/f119ec2cf5.js" crossorigin="anonymous"></script>
+    <script src="js/index.js" defer></script>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
             <img src="assets/MF logo.webp" alt="mf logo" class="logo--image">
         </a>
         <nav class="nav">
-            <a href="index.html#about" class="material-symbols-rounded">person</a>
+            <a href="index.html#about" class="material-symbols-rounded current">person</a>
             <a href="index.html#projects" class="material-symbols-rounded">school</a>
             <a href="index.html#passion-project" class="material-symbols-rounded">celebration</a>
             <a href="index.html#contact" class="material-symbols-rounded">mail</a>
@@ -138,7 +139,7 @@
                             <p class="card-s__description">Information website catering to parents planing a visit, and
                                 inspiring children.</p>
                         </div>
-                        <a href="https://mamf92.github.io/rainydays-v2/" class="button primary medium pink"
+                        <a href="https://mamf92.github.io/semester-project-1/" class="button primary medium pink"
                             aria-label="Visit RainyDays v2 website.">Visit deployed website</a>
                     </div>
                 </article>
@@ -181,10 +182,11 @@
                                 process.</p>
                         </div>
                         <div class="card-l__cta">
-                            <a href="" class="card-l__cta button primary small pink"
-                                aria-label="Explore more events, exhibitions, and activities.">Visit deployed
+                            <a href="https://mamf92.github.io/escparty/" class="card-l__cta button primary small pink"
+                                aria-label="Visit deployed ESC Party page">Visit deployed
                                 page</a>
-                            <a href="html/about.html#contact-us" class="card-l__cta button primary small pink">Check
+                            <a href="https://github.com/mamf92/escparty"
+                                class="card-l__cta button primary small pink">Check
                                 the code</a>
                         </div>
                     </div>
@@ -230,22 +232,25 @@
             <div class="hero__content">
                 <div class="hero__text">
                     <h2>Experience</h2>
-                    <p class="hero__text__p">I'm a frontend developer based in Norway but open to explore the world. I
-                        am currently transitioning from a background in teaching to the exciting world of development. I
-                        bring strong communication skills, a user-focused mindset, and a passion for clean, accessible
-                        code.</p>
-                    <p class="hero__text__p">
-                        After years in the classroom, I decided to pursue my long-standing interest in technology.
+                    <p class="hero__text__p">After years in the classroom, I decided to pursue my long-standing interest
+                        in technology.
                         Today, I
                         enjoy building responsive, inclusive, and maintainable web interfaces — and I’m constantly
                         learning
-                        to improve my skills and broaden my toolset.
+                        to improve my skills and broaden my toolset.</p>
+                    <p class="hero__text__p">
+                        With my background in education, I bring strong communication skills and a user-focused mindset
+                        to my work. I have a passion for contributing to my work environment which I know has value in
+                        any team. Being structured and organized, I strive to write clean, accessible code that is easy
+                        to maintain and scale. I am always eager to learn new technologies and improve my skills, and I
+                        am excited about the opportunity to work with a team that shares my passion for creating great
+                        user experiences.
                     </p>
                 </div>
                 <div class="hero__cta">
-                    <a href="html/plan-visit.html" class="button primary pink">Check my GitHub</a>
+                    <a href="https://github.com/mamf92" target="_blank" class="button primary pink">Check my GitHub</a>
                     <a href="assets/cv/Martin Fischer Frontend Developer CV - Projects and Skills.pdf"
-                        class="button primary pink" download>Download CV</a>
+                        class="button primary pink arrow-down" download>Download CV</a>
                 </div>
             </div>
         </section>
