Minor refinements to layout of card-s and added link to repo according to brief.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="project-cards">
                 <article class="card-s">
-                    <div class="card-s__image"><img src="assets/images/escnews.png" alt="Screenshot of ESC News
+                    <div class="card-s__image"><img src="assets/images/escnews.webp" alt="Screenshot of ESC News
                             website with a navigation bar and a carousel of the latest news articles.">
                     </div>
                     <div class="card-s__content">
@@ -93,10 +93,11 @@
                         </div>
                         <a href="https://mamf92.github.io/escnews/" class="button primary medium pink">Visit ESC
                             News</a>
-                    </div>
+                        <a href="https://github.com/mamf92/escnews/" class="button secondary medium">
+                            ESC News repo</a>
                 </article>
                 <article class="card-s">
-                    <div class="card-s__image"><img src="assets/images/rainydaysv2.png"
+                    <div class="card-s__image"><img src="assets/images/rainydaysv2.webp"
                             alt="Screenshot of RainyDays e-commerce website showing a navbar, the moto 'Pushing the Comfort Zone', and call-to-action buttons for men's and women's clothes.">
                     </div>
                     <div class="card-s__content">
@@ -124,10 +125,12 @@
                         </div>
                         <a href="https://mamf92.github.io/rainydays-v2/" class="button primary medium pink">Visit
                             RainyDays v2</a>
+                        <a href="https://github.com/mamf92/rainydays-v2/" class="button secondary medium">
+                            RainyDays v2 repo</a>
                     </div>
                 </article>
                 <article class="card-s">
-                    <div class="card-s__image"><img src="assets/images/communitysciencemuseum.png"
+                    <div class="card-s__image"><img src="assets/images/communitysciencemuseum.webp"
                             alt="Screenshot of Community Science Museuem website featuring a navigation bar and call-to-action buttons for parents and children.">
                     </div>
                     <div class="card-s__content">
@@ -140,7 +143,6 @@
                                 </span>
                                 <span class="tech-icon">
                                     <img src="assets/icons/css.svg" alt="" aria-hidden="true" class="icon css-icon">
-                                    <span class="sr-only">CSS</span>
                                 </span>
                                 <span class="tech-icon">
                                     <img src="assets/icons/javascript.svg" alt="" aria-hidden="true"
@@ -152,8 +154,10 @@
                             <p class="card-s__description">Information website catering to parents planing a visit, and
                                 inspiring children.</p>
                         </div>
-                        <a href="https://mamf92.github.io/semester-project-1/" class="button primary medium pink">Visit
+                        <a href="https://mamf92.github.io/semester-project-1/" class="button primary medium">Visit
                             Science Museum</a>
+                        <a href="https://github.com/mamf92/semester-project-1" class="button secondary medium">
+                            Science Museum repo</a>
                     </div>
                 </article>
             </div>
@@ -164,7 +168,7 @@
             </div>
             <div class="passion-product-cards">
                 <article class="card-l">
-                    <div class="card-l__image--right"><img src="assets/images/escparty.png"
+                    <div class="card-l__image--right"><img src="assets/images/escparty.webp"
                             alt="ESC Party app interface displaying three main options: multiplayer quiz, single-player quiz, and create quiz functionality.">
                     </div>
                     <div class="card-l__content--left">
@@ -211,7 +215,7 @@
             </div>
             <div class="contact-cards">
                 <article class="card-l">
-                    <div class="card-l__image"><img src="assets/images/profil-picture.jpg"
+                    <div class="card-l__image"><img src="assets/images/profil-picture.webp"
                             alt="Martin Fischer smiling, with a neutral background.">
                     </div>
                     <div class="card-l__content">
