Changed link to ESC News project to show it is the first version of the page.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="project-cards">
                 <article class="card-s">
-                    <div class="card-s__image"><img src="assets/images/escnews.webp" alt="Screenshot of ESC News
+                    <div class="card-s__image"><img src="assets/images/escnews.webp" alt="Screenshot of ESC News v1
                             website with a navigation bar and a carousel of the latest news articles.">
                     </div>
                     <div class="card-s__content">
@@ -87,14 +87,14 @@
                                     <span class="sr-only">JavaScript</span>
                                 </span>
                             </div>
-                            <h3 class="card-s__heading">ESC News</h3>
+                            <h3 class="card-s__heading">ESC News v1</h3>
                             <p class="card-s__description">News page with the lates in Eurovision news.
                                 Admin registration and login to post and edit news. View and share posts you enjoy!</p>
                         </div>
-                        <a href="https://mamf92.github.io/escnews/" class="button primary medium pink">Visit ESC
+                        <a href="https://mamf92.github.io/escnews-v1/" class="button primary medium pink">Visit ESC
                             News</a>
-                        <a href="https://github.com/mamf92/escnews/" class="button secondary medium">
-                            ESC News repo</a>
+                        <a href="https://github.com/mamf92/escnews-v1/" class="button secondary medium">
+                            ESC News v1 repo</a>
                 </article>
                 <article class="card-s">
                     <div class="card-s__image"><img src="assets/images/rainydaysv2.webp"
@@ -300,7 +300,7 @@
             <div class="links__projects">
                 <h3 class="sr-only">Projects</h3>
                 <a href="index.html#projects" class="footer-heading" aria-label="Go to projects section.">Projects</a>
-                <a href="https://mamf92.github.io/escnews/" aria-label="Visit ESC News website.">ESC News</a>
+                <a href="https://mamf92.github.io/escnews-v1/" aria-label="Visit ESC News website.">ESC News v1</a>
                 <a href="https://mamf92.github.io/escparty/" aria-label="Visit ESC Party website.">ESC Party</a>
                 <a href="https://mamf92.github.io/semester-project-1/"
                     aria-label="Go to Community Science Museum website.">Community Museum</a>
