--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 class="logo--image">
         </a>
         <nav class="nav" aria-label="Main navigation">
-            <a href="index.html#about" class="symbols current" aria-label="About me"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M12 1.2A4.8 4.8 0 1 0 16.8 6 4.805 4.805 0 0 0 12 1.2zm0 8.6A3.8 3.8 0 1 1 15.8 6 3.804 3.804 0 0 1 12 9.8zM20 22H4v-4.5A5.506 5.506 0 0 1 9.5 12h5a5.506 5.506 0 0 1 5.5 5.5zM5 21h14v-3.5a4.505 4.505 0 0 0-4.5-4.5h-5A4.505 4.505 0 0 0 5 17.5z"></path><path fill="none" d="M0 0h24v24H0z"></path></g></svg></a>
-            <a href="index.html#projects" class="material-symbols-rounded" aria-label="My projects"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17.673 5.606a3326.02 3326.02 0 0 1-5.671-2.674L.138 8.524l2.03.98L2 9.531V20h1v-9.626l.72-.124.28.135v5.288c0 .914 5.206 3.533 6.249 4.049a3.89 3.89 0 0 0 3.48-.026C20 16.486 20 15.895 20 15.673v-5.288l3.854-1.857s-3.8-1.801-6.181-2.922zM19 15.504a51.526 51.526 0 0 1-5.726 3.302 2.884 2.884 0 0 1-2.582.02A40.184 40.184 0 0 1 5 15.521v-4.655l7 3.373 7-3.373zm-7-2.373L5.416 9.958l6.469-1.115-.17-.987-7.85 1.354-1.403-.676 9.537-4.495c.825.393 8.523 4.014 9.542 4.494z"></path><path fill="none" d="M0 0h24v24H0z"></path></g></svg></a>
+            <a href="index.html#about" class="symbols current" aria-label="About me"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M5 21C5 17.134 8.13401 14 12 14C15.866 14 19 17.134 19 21M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
+            <a href="index.html#projects" class="material-symbols-rounded" aria-label="My projects"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7 8L3 11.6923L7 16M17 8L21 11.6923L17 16M14 4L10 20" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
             <a href="index.html#passion-project" class="symbols"
-                aria-label="Passion project"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M12 22.59l-9.2-9.12C.43 11.09.43 7.21 2.8 4.83a6.03 6.03 0 0 1 4.29-1.79c1.62 0 3.14.63 4.29 1.79l.62.62.62-.62a6.014 6.014 0 0 1 4.29-1.79c1.62 0 3.14.63 4.29 1.79 2.37 2.38 2.37 6.26 0 8.64L12 22.59zM7.09 4c-1.37 0-2.65.54-3.61 1.51-2 2.01-2 5.28 0 7.29L12 21.25l8.53-8.45c2-2.01 2-5.28 0-7.29A5.079 5.079 0 0 0 16.92 4c-1.37 0-2.65.54-3.61 1.51l-1.3 1.3-1.3-1.3C9.75 4.54 8.46 4.01 7.1 4z"></path><path fill="none" d="M0 0h24v24H0z"></path></g></svg></a>
-            <a href="index.html#contact" class="symbols" aria-label="Contact me"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M21.5 4h-19A1.504 1.504 0 0 0 1 5.5v13A1.5 1.5 0 0 0 2.5 20h19a1.5 1.5 0 0 0 1.5-1.5v-13A1.504 1.504 0 0 0 21.5 4zM12 12.07L2.82 5h18.36zm-2.846-.93L2 18.292V5.631zm.798.615L12 13.33l2.048-1.576L21.293 19H2.707zm4.894-.616L22 5.631v12.662z"></path><path fill="none" d="M0 0h24v24H0z"></path></g></svg></a>
+                aria-label="Passion project"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M12 6.00019C10.2006 3.90317 7.19377 3.2551 4.93923 5.17534C2.68468 7.09558 2.36727 10.3061 4.13778 12.5772C5.60984 14.4654 10.0648 18.4479 11.5249 19.7369C11.6882 19.8811 11.7699 19.9532 11.8652 19.9815C11.9483 20.0062 12.0393 20.0062 12.1225 19.9815C12.2178 19.9532 12.2994 19.8811 12.4628 19.7369C13.9229 18.4479 18.3778 14.4654 19.8499 12.5772C21.6204 10.3061 21.3417 7.07538 19.0484 5.17534C16.7551 3.2753 13.7994 3.90317 12 6.00019Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
+            <a href="index.html#contact" class="symbols" aria-label="Contact me"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M3 8L8.44992 11.6333C9.73295 12.4886 10.3745 12.9163 11.0678 13.0825C11.6806 13.2293 12.3194 13.2293 12.9322 13.0825C13.6255 12.9163 14.2671 12.4886 15.5501 11.6333L21 8M6.2 19H17.8C18.9201 19 19.4802 19 19.908 18.782C20.2843 18.5903 20.5903 18.2843 20.782 17.908C21 17.4802 21 16.9201 21 15.8V8.2C21 7.0799 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V15.8C3 16.9201 3 17.4802 3.21799 17.908C3.40973 18.2843 3.71569 18.5903 4.09202 18.782C4.51984 19 5.07989 19 6.2 19Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
             <a href="index.html#more-about" class="symbols"
-                aria-label="Experience and skills"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M1 20.56c0 .794.646 1.44 1.44 1.44h19.12c.795 0 1.44-.646 1.44-1.44V6.44C23 5.646 22.354 5 21.56 5H17V3.5A1.5 1.5 0 0 0 15.5 2h-7A1.5 1.5 0 0 0 7 3.5V5H2.44a1.44 1.44 0 0 0-1.436 1.401L1 20.56zM16 11h1v3h-1v-3zM8 3.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5V5H8V3.5zM2.5 6h18.96a.49.49 0 0 1 .226.059c.07.036.123.08.154.116v.001h.001c.03.036.066.094.09.167a.433.433 0 0 1 .028.208l-.006.027v.005l-.582 2.493A3.485 3.485 0 0 1 18 11.993V10h-3v2H9v-2H6v1.996a3.487 3.487 0 0 1-3.41-2.92l-.583-2.493v-.004l-.006-.028a.428.428 0 0 1 .028-.21.53.53 0 0 1 .09-.164.53.53 0 0 1 .155-.118A.493.493 0 0 1 2.5 6zM7 11h1v3H7v-3zm14.56 10H2.44a.44.44 0 0 1-.44-.44V10.445a4.47 4.47 0 0 0 4 2.551V15h3v-2h6v2h3v-2.007a4.478 4.478 0 0 0 4-2.639V20.56a.44.44 0 0 1-.44.44zm1.38-14.253v-.018.018z"></path><path fill="none" d="M0 0h24v24H0z"></path></g></svg></a>
+                aria-label="Experience and skills"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M3.02747 10.022L6.68521 12.9482C7.17251 13.338 7.41617 13.5329 7.68749 13.6715C7.9282 13.7945 8.18443 13.8844 8.44921 13.9387C8.74767 14 9.0597 14 9.68375 14H14.3163C14.9403 14 15.2523 14 15.5508 13.9387C15.8156 13.8844 16.0718 13.7945 16.3125 13.6715C16.5838 13.5329 16.8275 13.338 17.3148 12.9482L20.9725 10.022M3.02747 10.022C3 10.4895 3 11.0642 3 11.8V16.2C3 17.8802 3 18.7202 3.32698 19.362C3.6146 19.9265 4.07354 20.3854 4.63803 20.673C5.27976 21 6.11984 21 7.8 21H16.2C17.8802 21 18.7202 21 19.362 20.673C19.9265 20.3854 20.3854 19.9265 20.673 19.362C21 18.7202 21 17.8802 21 16.2V11.8C21 11.0642 21 10.4895 20.9725 10.022M3.02747 10.022C3.06272 9.42205 3.1432 8.99871 3.32698 8.63803C3.6146 8.07354 4.07354 7.6146 4.63803 7.32698C5.27976 7 6.11984 7 7.8 7H8M20.9725 10.022C20.9373 9.42205 20.8568 8.99871 20.673 8.63803C20.3854 8.07354 19.9265 7.6146 19.362 7.32698C18.7202 7 17.8802 7 16.2 7H16M8 7V6C8 4.34315 9.34315 3 11 3H13C14.6569 3 16 4.34315 16 6V7M8 7H16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
         </nav>
     </header>
     <main class="" id="main-content">
@@ -66,7 +66,7 @@
             </div>
             <div class="project-cards">
                 <article class="card-s">
-                    <div class="card-s__image"><img src="assets/images/escnews.webp" alt="Screenshot of ESC News v1
+                    <div class="card-s__image"><img src="assets/images/escnews.webp" alt="Screenshot of ESC News
                             website with a navigation bar and a carousel of the latest news articles.">
                     </div>
                     <div class="card-s__content">
@@ -87,14 +87,15 @@
                                     <span class="sr-only">JavaScript</span>
                                 </span>
                             </div>
-                            <h3 class="card-s__heading">ESC News v1</h3>
-                            <p class="card-s__description">News page with the lates in Eurovision news.
-                                Admin registration and login to post and edit news. View and share posts you enjoy!</p>
+                            <h3 class="card-s__heading">ESC News</h3>
+                            <p class="card-s__description">A dynamic Eurovision news app that allows admins to publish, update, and manage articles with full CRUD operations and authentication via Firebase. Built using vanilla JavaScript, it emphasizes performance, real-time data syncing, and a user-friendly news-reading experience.</p>
                         </div>
-                        <a href="https://mamf92.github.io/escnews-v1/" class="button primary medium pink">Visit ESC
-                            News</a>
-                        <a href="https://github.com/mamf92/escnews-v1/" class="button secondary medium">
-                            ESC News v1 repo</a>
+                        <div class="card-s__cta">
+                            <a href="https://mamf92.github.io/escnews/" class="button primary medium pink">Visit ESC
+                                News</a>
+                            <a href="https://github.com/mamf92/escnews/" class="button secondary medium">
+                                ESC News repo</a>
+                        </div>
                 </article>
                 <article class="card-s">
                     <div class="card-s__image"><img src="assets/images/rainydaysv2.webp"
@@ -119,15 +120,14 @@
                                 </span>
                             </div>
                             <h3 class="card-s__heading">RainyDays v2</h3>
-                            <p class="card-s__description">E-commerce webpage with with REST API, error handling,
-                                and clean
-                                webdesign.</p>
+                            <p class="card-s__description">A fully functional e-commerce frontend that consumes a REST API for product listings and order handling. Includes error management and responsive UI designed for accessibility and clean UX flow.</p>
                         </div>
-                        <a href="https://mamf92.github.io/rainydays-v2/" class="button primary medium pink">Visit
-                            RainyDays v2</a>
-                        <a href="https://github.com/mamf92/rainydays-v2/" class="button secondary medium">
-                            RainyDays v2 repo</a>
-                    </div>
+                        <div class="card-s__cta">
+                            <a href="https://mamf92.github.io/rainydays-v2/" class="button primary medium pink">Visit
+                                RainyDays v2</a>
+                            <a href="https://github.com/mamf92/rainydays-v2/" class="button secondary medium">
+                                RainyDays v2 repo</a>
+                        </div>
                 </article>
                 <article class="card-s">
                     <div class="card-s__image"><img src="assets/images/communitysciencemuseum.webp"
@@ -151,13 +151,14 @@
                                 </span>
                             </div>
                             <h3 class="card-s__heading">The Community Science Museum</h3>
-                            <p class="card-s__description">Information website catering to parents planing a visit, and
-                                inspiring children.</p>
+                            <p class="card-s__description">An informational site designed to guide families through their museum visit. Structured for clear navigation, accessibility, and engagement across multiple user groups (parents, children), with a focus on semantic HTML and responsive design.</p>
                         </div>
+                        <div class="card-s__cta">
                         <a href="https://mamf92.github.io/semester-project-1/" class="button primary medium">Visit
                             Science Museum</a>
                         <a href="https://github.com/mamf92/semester-project-1" class="button secondary medium">
                             Science Museum repo</a>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -194,16 +195,13 @@
                                 </span>
                             </div>
                             <h3 class="card-l__heading">ESC Party</h3>
-                            <p class="card-l__description">A React-based Eurovision app with TypeScript, featuring
-                                multiplayer quizzes and ongoing development of quiz creation, live event scoreboards,
-                                and artist highlights. A learning-by-doing project focused on an iterative development
-                                process.</p>
+                            <p class="card-l__description">A TypeScript + React quiz platform centered on Eurovision, featuring multiplayer and single-player modes. Built with Firebase/Firestore to enable real-time interactivity and designed for iterative development with evolving features. Includes in-progress components such as custom quiz creation, live scoring, and artist discovery.</p>
                         </div>
                         <div class="card-l__cta">
                             <a href="https://mamf92.github.io/escparty/"
                                 class="card-l__cta button primary small pink">Visit ESC Party</a>
                             <a href="https://github.com/mamf92/escparty"
-                                class="card-l__cta button primary small pink">Check the code</a>
+                                class="card-l__cta button primary small pink">View on GitHub</a>
                         </div>
                     </div>
                 </article>
